--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>Mr. Wang is OK!</h1>
+    <h1>Mr. Wang is really really good today!</h1>
     <img src="images/portrait.jpg" alt="A stunning portrait of Mr. Wang." title="Really captures the hair.">
 
     <p class="bold">Mr. Wang is a CS teacher at Bergen County Academies.</p>
